Enabling nulls in exception parameters